# Yun_world

./: .gitignore  README.md  app.js  app.json  app.wxss  env.d.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  project.config.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
apis/: agent.js  assessment.js  auth.js  chat.js  system.js  user.js  video.js
components/agent-actions/: agent-actions.js  agent-actions.json  agent-actions.wxml  agent-actions.wxss
components/chat-bottom-bar/: chat-bottom-bar.js  chat-bottom-bar.wxml  chat-bottom-bar.wxss
components/chat-bubble/: chat-bubble.js  chat-bubble.json  chat-bubble.wxml  chat-bubble.wxss
components/markdown-renderer/: markdown-renderer.js  markdown-renderer.wxml  markdown-renderer.wxss
components/sidebar/: sidebar.js  sidebar.wxml  sidebar.wxss
components/top-bar/: top-bar.js  top-bar.wxml  top-bar.wxss
images/: .gitkeep
pages/agent-create/: agent-create.js  agent-create.json  agent-create.wxml  agent-create.wxss
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/ai/: client.rs  prompts.rs
src-tauri/src/commands/: ai_cmd.rs  flash_cmd.rs  mod.rs  settings_cmd.rs  task_cmd.rs  window_cmd.rs
src-tauri/src/db/: mod.rs  models.rs  queries.rs  schema.rs
src-tauri/src/timer/: mod.rs  scheduler.rs
src-tauri/src/window/: effects.rs  mod.rs
utils/: auth.js  config.js  i18n.js  request.js  storage.js
(+129 files in other folders)
